got scrolling background initially working, need to address issue with ctx.moveTo, ctx.lineTo outside of limits and color flickering

--- a/index.css
+++ b/index.css
@@ -10,9 +10,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: -2;
 }
+
+#scrollingBackground {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+}
+
 #calculator {
-    border: 2px solid white;
+    border: 4px solid black;
+    border-radius: 5px;
+    box-shadow: 10px 10px 2px 0px rgba(0,0,0, .2);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 2fr repeat(5, 1fr);
@@ -20,6 +31,7 @@ body {
     height: 700px;
     background-color: #321;
     font-size: 2em;
+    z-index: 1;
 }
 #calculator > * {
     font-size: inherit;
